# ghc-foreign-prof-repro

./: .gitignore  repro.cabal  shell.nix
cbits/: repro.c
include/: repro.h
src/: Repro.hs
